--- a/exercise/package.json
+++ b/exercise/package.json
@@ -4,6 +4,7 @@
   "description": "Simple movie ticket machine",
   "main": "index.js",
   "scripts": {
+    "dev": "next",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Channnnnn",
