--- a/exercise/package.json
+++ b/exercise/package.json
@@ -4,13 +4,18 @@
   "description": "Simple movie ticket machine",
   "main": "index.js",
   "scripts": {
-    "dev": "next",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon server/index.js",
+    "build": "next build",
+    "start": "NODE_ENV=production node server.js"
   },
   "author": "Channnnnn",
   "license": "ISC",
   "dependencies": {
+    "@zeit/next-sass": "^0.2.0",
+    "express": "^4.16.3",
+    "isomorphic-fetch": "^2.2.1",
     "next": "^6.1.2",
+    "node-sass": "^4.9.3",
     "react": "^16.5.0",
     "react-dom": "^16.5.0"
   }
