--- a/exercise/package.json
+++ b/exercise/package.json
@@ -13,9 +13,10 @@
   "dependencies": {
     "@zeit/next-sass": "^0.2.0",
     "express": "^4.16.3",
-    "isomorphic-fetch": "^2.2.1",
+    "firebase": "^5.5.0",
     "next": "^6.1.2",
     "node-sass": "^4.9.3",
+    "nodemon": "^1.18.4",
     "react": "^16.5.0",
     "react-dom": "^16.5.0"
   }
