--- a/exercise/package.json
+++ b/exercise/package.json
@@ -18,6 +18,7 @@
     "node-sass": "^4.9.3",
     "nodemon": "^1.18.4",
     "react": "^16.5.0",
-    "react-dom": "^16.5.0"
+    "react-dom": "^16.5.0",
+    "xmlhttprequest": "^1.8.0"
   }
 }
