--- a/exercise/package.json
+++ b/exercise/package.json
@@ -15,6 +15,7 @@
     "express": "^4.16.3",
     "firebase": "^5.5.0",
     "next": "^6.1.2",
+    "next-routes": "^1.4.2",
     "node-sass": "^4.9.3",
     "nodemon": "^1.18.4",
     "react": "^16.5.0",
