--- a/exercise/package.json
+++ b/exercise/package.json
@@ -4,9 +4,9 @@
   "description": "Simple movie ticket machine",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon server/index.js",
-    "build": "next build",
-    "start": "NODE_ENV=production node server.js"
+    "dev": "nodemon server",
+    "build": "next build && yarn",
+    "start": "SET NODE_ENV=production & node server"
   },
   "author": "Channnnnn",
   "license": "ISC",
@@ -20,6 +20,6 @@
     "nodemon": "^1.18.4",
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
-    "xmlhttprequest": "^1.8.0"
+    "yarn": "^1.10.1"
   }
 }
