--- a/exercise/package.json
+++ b/exercise/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon server",
-    "build": "next build && yarn",
+    "build": "next build",
     "start": "SET NODE_ENV=production & node server"
   },
   "author": "Channnnnn",
