--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Simple movie ticket machine",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon server",
+    "dev": "node server.js",
     "build": "next build",
-    "start": "SET NODE_ENV=production & node server"
+    "start": "SET NODE_ENV=production & node server.js"
   },
   "author": "Channnnnn",
   "license": "ISC",
